@@ -430,13 +430,22 @@ class AtlasProdJobBroker (JobBrokerBase):
             tmpMaxAtomSize = inputChunk.getMaxAtomSize(getNumEvents=True)
             minWalltime = taskSpec.cpuTime * tmpMaxAtomSize
             strMinWalltime = 'cpuTime*nEventsPerJob={0}*{1}'.format(taskSpec.cpuTime,tmpMaxAtomSize)
-        if not minWalltime in [0,None]:
+        if not minWalltime in [0,None] or inputChunk.useScout():
             newScanSiteList = []
             for tmpSiteName in scanSiteList:
                 tmpSiteSpec = self.siteMapper.getSite(tmpSiteName)
-                # check max walltime at the site
                 siteMaxTime = tmpSiteSpec.maxtime
                 origSiteMaxTime = siteMaxTime
+                print tmpSiteName,siteMaxTime
+                # sending scouts to only sites where walltime is more than 1day
+                if inputChunk.useScout():
+                    if siteMaxTime != 0 and siteMaxTime < 24*60*60:
+                        tmpMsg = '  skip site={0} due to site walltime {1} (site upper limit) insufficient for scouts '.format(tmpSiteName,
+                                                                                                                               tmpSiteStr)
+                        tmpMsg += 'criteria=-scoutwalltime'
+                        tmpLog.debug(tmpMsg)
+                        continue
+                # check max walltime at the site
                 tmpSiteStr = '{0}'.format(siteMaxTime)
                 if taskSpec.useHS06():
                     oldSiteMaxTime = siteMaxTime
